--- a/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
+++ b/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
@@ -3,6 +3,9 @@ presubmits:
   - agent: kubernetes
     always_run: false
     skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
+    branches:
+      - ^main$
+      - ^main-
     cluster: build02
     context: ci/prow/e2e
     decorate: true
@@ -63,6 +66,7 @@ presubmits:
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
   - agent: kubernetes
     always_run: false
+    skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     branches:
     - ^main$
     - ^main-
@@ -118,8 +122,11 @@ presubmits:
           secretName: result-aggregator
     trigger: (?m)^/test( | .* )image-push,?($|\s.*)
   - agent: kubernetes
-    always_run: true
+    always_run: false
     skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
+    branches:
+      - ^main$
+      - ^main-
     cluster: build02
     context: ci/prow/images
     decorate: true
