--- a/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
+++ b/ci-operator/jobs/stackrox/acs-fleet-manager/stackrox-acs-fleet-manager-main-presubmits.yaml
@@ -2,7 +2,6 @@ presubmits:
   stackrox/acs-fleet-manager:
   - agent: kubernetes
     always_run: false
-    skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     branches:
     - ^main$
     - ^main-
@@ -16,6 +15,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-stackrox-acs-fleet-manager-main-e2e
     rerun_command: /test e2e
+    skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE)$
     spec:
       containers:
       - args:
@@ -66,7 +66,6 @@ presubmits:
     trigger: (?m)^/test( | .* )e2e,?($|\s.*)
   - agent: kubernetes
     always_run: false
-    skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     branches:
     - ^main$
     - ^main-
@@ -80,6 +79,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-stackrox-acs-fleet-manager-main-image-push
     rerun_command: /test image-push
+    skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE)$
     spec:
       containers:
       - args:
@@ -123,7 +123,6 @@ presubmits:
     trigger: (?m)^/test( | .* )image-push,?($|\s.*)
   - agent: kubernetes
     always_run: false
-    skip_if_only_changed: "^docs/|\\.(md|adoc)$|^(README|LICENSE)$"
     branches:
     - ^main$
     - ^main-
@@ -137,6 +136,7 @@ presubmits:
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
     name: pull-ci-stackrox-acs-fleet-manager-main-images
     rerun_command: /test images
+    skip_if_only_changed: ^docs/|\.(md|adoc)$|^(README|LICENSE)$
     spec:
       containers:
       - args:
