split parallel args

--- a/ci-operator/step-registry/addon/addon-workflow.yaml
+++ b/ci-operator/step-registry/addon/addon-workflow.yaml
@@ -2,7 +2,7 @@ workflow:
   as: addon
   steps:
     env:
-      PARALLEL: "true"
+      PARALLEL_INSTALL: "true"
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
     pre:
       - ref: cluster-install
