--- a/ci-operator/step-registry/cluster/cluster-workflow.yaml
+++ b/ci-operator/step-registry/cluster/cluster-workflow.yaml
@@ -6,7 +6,7 @@ workflow:
       CLUSTER2_CONFIG: ""
       CLUSTER3_CONFIG: ""
       CLUSTER4_CONFIG: ""
-      PARALLEL: "true"
+      CLUSTER_PARALLEL: "true"
       PULL_SECRET_NAME: ""
       S3_BUCKET_NAME: ""
       S3_BUCKET_PATH: ""
