--- a/ci-operator/step-registry/operator/operator-workflow.yaml
+++ b/ci-operator/step-registry/operator/operator-workflow.yaml
@@ -2,7 +2,7 @@ workflow:
   as: operator
   steps:
     env:
-      PARALLEL: "true"
+      PARALLEL_INSTALL: "true"
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
     post:
     - ref: cluster-uninstall
