--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-cluster-install-uninstall.yaml
@@ -68,7 +68,7 @@ tests:
   steps:
     cluster_profile: aws-managed-cspi-qe
     env:
-      CLUSTER_PARALLEL: "false"
+      CLUSTERS_RUN_IN_PARALLEL: "false"
       CLUSTER1_CONFIG: name=ci1-aws-ipi;base_domain=aws.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.13;stream=ci;timeout=1h
       CLUSTER2_CONFIG: name=ci2-aws-ipi;base_domain=aws.interop.ccitredhat.com;platform=aws;region=us-east-2;version=4.14;stream=nightly;timeout=1h
       PULL_SECRET_NAME: pull-secret
