--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-rhoam__v4.13-stage.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-rhoam__v4.13-stage.yaml
@@ -56,7 +56,7 @@ tests:
         ]
       FIREWATCH_DEFAULT_JIRA_PROJECT: MSINTEROP
       FIREWATCH_JIRA_API_TOKEN_PATH: /tmp/secrets/jira/access_token_msi
-      PARALLEL_INSTALL: "false"
+      ADDONS_OPERATORS_RUN_IN_PARALLEL: "false"
       S3_BUCKET_NAME: openshift-cli-installer
       S3_BUCKET_PATH: openshift-ci
       TEST_MARKER: RHOAM-RHODS
