--- a/ci-operator/step-registry/cluster/uninstall/cluster-uninstall-ref.yaml
+++ b/ci-operator/step-registry/cluster/uninstall/cluster-uninstall-ref.yaml
@@ -20,7 +20,7 @@ ref:
         Can be obtained from https://console.redhat.com/openshift/create/local.
         Docker `config.json` file should be saved under cluster secrets with credentials to `registry.ci.openshift.org`.
         Required only for AWS IPI installations.
-    - name: CLUSTER_PARALLEL
+    - name: CLUSTERS_RUN_IN_PARALLEL
       default: "true"
       documentation: To run cluster destroy in parallel, set to "true" else set to "false"
   documentation: >-
