--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__amd64-nightly.yaml
@@ -153,7 +153,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       BASELINE_CAPABILITY_SET: None
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @network-ovnkubernetes and not @fips
-        and not @console and not @storage and not @workloads'
+        and not @console and not @storage'
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
     test:
@@ -168,7 +168,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       BASELINE_CAPABILITY_SET: None
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @network-ovnkubernetes and not @fips
-        and not @console and not @storage and not @workloads'
+        and not @console and not @storage'
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
     test:
@@ -373,7 +373,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       BASELINE_CAPABILITY_SET: None
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @disconnected and @network-ovnkubernetes
-        and @singlenode and not @fips and not @console and not @storage and not @workloads'
+        and @singlenode and not @fips and not @console and not @storage'
       EXTRACT_MANIFEST_INCLUDED: "true"
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
@@ -390,7 +390,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       BASELINE_CAPABILITY_SET: None
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @disconnected and @network-ovnkubernetes
-        and @singlenode and not @fips and not @console and not @storage and not @workloads'
+        and @singlenode and not @fips and not @console and not @storage'
       EXTRACT_MANIFEST_INCLUDED: "true"
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
@@ -493,7 +493,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       BASELINE_CAPABILITY_SET: None
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @disconnected and @network-ovnkubernetes
-        and not @fips and not @workloads'
+        and not @fips'
       EXTRACT_MANIFEST_INCLUDED: "true"
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
@@ -510,7 +510,7 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       BASELINE_CAPABILITY_SET: None
       E2E_RUN_TAGS: '@amd64 and @aws-ipi and @disconnected and @network-ovnkubernetes
-        and not @fips and not @workloads'
+        and not @fips'
       EXTRACT_MANIFEST_INCLUDED: "true"
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
@@ -2461,8 +2461,7 @@ tests:
     cluster_profile: gcp-qe
     env:
       BASELINE_CAPABILITY_SET: None
-      E2E_RUN_TAGS: '@amd64 and @gcp-ipi and @network-ovnkubernetes and not @fips
-        and not @workloads'
+      E2E_RUN_TAGS: '@amd64 and @gcp-ipi and @network-ovnkubernetes and not @fips'
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
     test:
@@ -2474,8 +2473,7 @@ tests:
     cluster_profile: gcp-qe
     env:
       BASELINE_CAPABILITY_SET: None
-      E2E_RUN_TAGS: '@amd64 and @gcp-ipi and @network-ovnkubernetes and not @fips
-        and not @workloads'
+      E2E_RUN_TAGS: '@amd64 and @gcp-ipi and @network-ovnkubernetes and not @fips'
       PERSISTENT_MONITORING: "false"
       TAG_VERSION: '@4.14'
     test:
