Add config to build plugin-registry image
Signed-off-by: Valeriy Svydenko <vsvydenk@redhat.com>

--- a/ci-operator/config/eclipse-che/che-plugin-registry/eclipse-che-che-plugin-registry-main__v12.yaml
+++ b/ci-operator/config/eclipse-che/che-plugin-registry/eclipse-che-che-plugin-registry-main__v12.yaml
@@ -1,6 +1,9 @@
 build_root:
   project_image:
     dockerfile_path: .ci/openshift-ci/Dockerfile
+images:
+- dockerfile_path: build/dockerfiles/Dockerfile
+  to: che-plugin-registry
 releases:
   initial:
     integration:
@@ -27,6 +30,9 @@ tests:
       cli: latest
       commands: |
         /bin/bash .ci/openshift-ci/smoke-test.sh
+      dependencies:
+      - env: CHE_PLUGIN_REGISTRY
+        name: che-plugin-registry
       from: src
       resources:
         requests:
