adding cerberus observer to all tests

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly-x86-64.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__4.14-nightly-x86-64.yaml
@@ -42,6 +42,9 @@ tests:
       CONTROL_PLANE_INSTANCE_TYPE: m5.2xlarge
       OCP_ARCH: x86_64
       SPOT_INSTANCES: "true"
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     post:
     - chain: ipi-aws-post
     pre:
