--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__arm.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__arm.yaml
@@ -46,6 +46,9 @@ tests:
       BASE_DOMAIN: qe.devcluster.openshift.com
       OCP_ARCH: arm64
       SPOT_INSTANCES: "true"
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     post:
     - chain: ipi-aws-post
     pre:
