--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__rosa-4.12-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__rosa-4.12-nightly.yaml
@@ -40,6 +40,9 @@ tests:
       OPENSHIFT_VERSION: "4.12"
       REGION: us-east-2
       ROSA_LOGIN_ENV: production
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     test:
     - ref: redhat-chaos-pod-scenarios-random-system-pods
     workflow: rosa-aws-sts-hypershift
