--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__aro-4.13-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__aro-4.13-nightly.yaml
@@ -42,6 +42,9 @@ tests:
   cron: 0 8 */2 * *
   steps:
     cluster_profile: azure-qe
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     test:
     - chain: redhat-chaos-krkn-hub-tests
     workflow: openshift-qe-installer-azure-aro
