--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__rosa-4.13-nightly.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main__rosa-4.13-nightly.yaml
@@ -38,6 +38,9 @@ tests:
     env:
       CHANNEL_GROUP: nightly
       OPENSHIFT_VERSION: "4.13"
+    observers:
+      enable:
+      - redhat-chaos-cerberus
     test:
     - chain: redhat-chaos-krkn-hub-tests
     workflow: rosa-aws-sts
