updated the mm runtime adapter
Signed-off-by: heyselbi <selbi@redhat.com>

--- a/ci-operator/config/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0.yaml
+++ b/ci-operator/config/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0.yaml
@@ -2,7 +2,7 @@ base_images:
   modelmesh-serving-develop:
     name: modelmesh-serving-develop
     namespace: opendatahub-io
-    tag: v0.11.0-alpha
+    tag: v0.11.0
   ubi_minimal:
     name: ubi-minimal
     namespace: ocp
@@ -90,9 +90,9 @@ tests:
       SOURCE_IMAGE_REF: modelmesh-runtime-adapter
     env:
       IMAGE_REPO: modelmesh-runtime-adapter
-      IMAGE_TAG: v0.11.0-alpha
+      IMAGE_TAG: v0.11.0
     workflow: opendatahub-io-ci-image-mirror
 zz_generated_metadata:
-  branch: release-v0.11.0-alpha
+  branch: release-v0.11.0
   org: opendatahub-io
   repo: modelmesh-runtime-adapter
