--- a/ci-operator/jobs/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-postsubmits.yaml
+++ b/ci-operator/jobs/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-postsubmits.yaml
@@ -3,15 +3,15 @@ postsubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-alpha$
-    cluster: build04
+    - ^release-v0\.11\.0$
+    cluster: build01
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-branch-image-mirror
+    name: branch-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-branch-image-mirror
     skip_if_only_changed: ^(?:.*\/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE|.*\.develop)$
     spec:
       containers:
@@ -56,8 +56,8 @@ postsubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^release-v0\.11\.0-alpha$
-    cluster: build04
+    - ^release-v0\.11\.0$
+    cluster: build01
     decorate: true
     decoration_config:
       skip_cloning: true
@@ -65,7 +65,7 @@ postsubmits:
       ci-operator.openshift.io/is-promotion: "true"
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-images
+    name: branch-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-images
     spec:
       containers:
       - args:
@@ -110,15 +110,15 @@ postsubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-alpha$
-    cluster: build04
+    - ^release-v0\.11\.0$
+    cluster: build01
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-stable-image-mirror
+    name: branch-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-stable-image-mirror
     skip_if_only_changed: ^(?:.*\/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE|.*\.develop)$
     spec:
       containers:
