--- a/ci-operator/jobs/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-presubmits.yaml
+++ b/ci-operator/jobs/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-presubmits.yaml
@@ -3,8 +3,8 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-alpha$
-    - ^release-v0\.11\.0-alpha-
+    - ^release-v0\.11\.0$
+    - ^release-v0\.11\.0-
     cluster: build01
     context: ci/prow/fvt
     decorate: true
@@ -15,7 +15,7 @@ presubmits:
       ci-operator.openshift.io/cloud-cluster-profile: aws
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-fvt
+    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-fvt
     rerun_command: /test fvt
     skip_if_only_changed: ^(?:.*\/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE|.*\.develop)$
     spec:
@@ -78,9 +78,9 @@ presubmits:
   - agent: kubernetes
     always_run: true
     branches:
-    - ^release-v0\.11\.0-alpha$
-    - ^release-v0\.11\.0-alpha-
-    cluster: build03
+    - ^release-v0\.11\.0$
+    - ^release-v0\.11\.0-
+    cluster: build01
     context: ci/prow/images
     decorate: true
     decoration_config:
@@ -88,7 +88,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-images
+    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-images
     rerun_command: /test images
     spec:
       containers:
@@ -127,9 +127,9 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-alpha$
-    - ^release-v0\.11\.0-alpha-
-    cluster: build03
+    - ^release-v0\.11\.0$
+    - ^release-v0\.11\.0-
+    cluster: build01
     context: ci/prow/pr-image-mirror
     decorate: true
     decoration_config:
@@ -137,7 +137,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-pr-image-mirror
+    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-pr-image-mirror
     rerun_command: /test pr-image-mirror
     skip_if_only_changed: ^(?:.*\/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE|.*\.develop)$
     spec:
@@ -184,9 +184,9 @@ presubmits:
   - agent: kubernetes
     always_run: false
     branches:
-    - ^release-v0\.11\.0-alpha$
-    - ^release-v0\.11\.0-alpha-
-    cluster: build03
+    - ^release-v0\.11\.0$
+    - ^release-v0\.11\.0-
+    cluster: build01
     context: ci/prow/unit
     decorate: true
     decoration_config:
@@ -194,7 +194,7 @@ presubmits:
     labels:
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-alpha-unit
+    name: pull-ci-opendatahub-io-modelmesh-runtime-adapter-release-v0.11.0-unit
     rerun_command: /test unit
     skip_if_only_changed: ^(?:.*\/)?(?:\.gitignore|OWNERS|OWNERS_ALIASES|LICENSE|.*\.develop)$
     spec:
