use rand cluster names

--- a/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-rhoam__v4.13-production.yaml
+++ b/ci-operator/config/CSPI-QE/MSI/CSPI-QE-MSI-rhods-rhoam__v4.13-production.yaml
@@ -42,7 +42,8 @@ tests:
       ADDON1_CONFIG: name=managed-odh;notification-email=interop-qe-ms@redhat.com
       ADDON2_CONFIG: name=managed-api-service;addon-managed-api-service=1;rosa-cli-required=true;notification-email=interop-qe-ms@redhat.com;rosa=true
       ADDONS_OPERATORS_RUN_IN_PARALLEL: "false"
-      CLUSTER1_CONFIG: name=rhods-rhoam;platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=true;ocm-env=production
+      CLUSTER_NAME_PREFIX: coexist
+      CLUSTER1_CONFIG: platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=true;ocm-env=production
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "MSINTEROP", "jira_epic": "MSINTEROP-435"},
