--- a/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
+++ b/ci-operator/config/rhpit/interop-tests/rhpit-interop-tests-main__rosa-sts-test-operator-ocp4.13-lp-interop.yaml
@@ -28,11 +28,11 @@ resources:
       cpu: 200m
       memory: 200Mi
 tests:
-- as: rosa-sts-test-operator-use-workflow
-  cron: 0 6 * * 1
+- as: rosa-sts-test-operator
   steps:
     cluster_profile: aws-cspi-qe
     env:
+      CLUSTER1_CONFIG: name=rosa-sts;platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=m5.4xlarge;timeout=90m;replicas=6;fips=false;ocm-env=stage
       FIREWATCH_CONFIG: |
         [
           {"step": "operator-install", "failure_type": "all", "classification": "Provisioning - Operators", "jira_project": "LPTOCPCI"},
@@ -46,20 +46,9 @@ tests:
       FIREWATCH_DEFAULT_JIRA_PROJECT: LPTOCPCI
       FIREWATCH_JIRA_SERVER: https://issues.redhat.com
       OPENSHIFT_VERSION: "4.13"
-      OPERATOR1_CONFIG: name=operator
-    workflow: operator-aws-rosa
-- as: rosa-sts-test-operator-use-installer
-  cron: 0 6 * * 1
-  steps:
-    cluster_profile: aws-cspi-qe
-    env:
-      CLUSTER1_CONFIG: name=rosa-cluster;platform=rosa;region=us-east-2;version=4.13;channel-group=stable;compute-machine-type=g4dn.2xlarge;timeout=90m;replicas=2;fips=true;ocm-env=stage
-      OPENSHIFT_VERSION: "4.13"
-      OPERATOR1_CONFIG: name=operator
-    test:
-    - ref: cluster-install
-    - ref: operator-install
-    - ref: cluster-uninstall
+      S3_BUCKET_NAME: openshift-cli-installer
+      S3_BUCKET_PATH: openshift-ci
+    workflow: operator
 zz_generated_metadata:
   branch: main
   org: rhpit
