--- a/ci-operator/jobs/openshift/assisted-image-service/openshift-assisted-image-service-release-ocm-2.8-presubmits.yaml
+++ b/ci-operator/jobs/openshift/assisted-image-service/openshift-assisted-image-service-release-ocm-2.8-presubmits.yaml
@@ -229,6 +229,64 @@ presubmits:
           secretName: result-aggregator
     trigger: (?m)^/test( | .* )mce-images,?($|\s.*)
   - agent: kubernetes
+    always_run: true
+    branches:
+    - ^release-ocm-2\.8$
+    - ^release-ocm-2\.8-
+    cluster: build02
+    context: ci/prow/mce-publish
+    decorate: true
+    decoration_config:
+      skip_cloning: true
+    labels:
+      ci-operator.openshift.io/variant: mce
+      ci.openshift.io/generator: prowgen
+      pj-rehearse.openshift.io/can-be-rehearsed: "true"
+    name: pull-ci-openshift-assisted-image-service-release-ocm-2.8-mce-publish
+    rerun_command: /test mce-publish
+    spec:
+      containers:
+      - args:
+        - --gcs-upload-secret=/secrets/gcs/service-account.json
+        - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
+        - --report-credentials-file=/etc/report/credentials
+        - --secret-dir=/secrets/ci-pull-credentials
+        - --target=publish
+        - --variant=mce
+        command:
+        - ci-operator
+        image: ci-operator:latest
+        imagePullPolicy: Always
+        name: ""
+        resources:
+          requests:
+            cpu: 10m
+        volumeMounts:
+        - mountPath: /secrets/ci-pull-credentials
+          name: ci-pull-credentials
+          readOnly: true
+        - mountPath: /secrets/gcs
+          name: gcs-credentials
+          readOnly: true
+        - mountPath: /etc/pull-secret
+          name: pull-secret
+          readOnly: true
+        - mountPath: /etc/report
+          name: result-aggregator
+          readOnly: true
+      serviceAccountName: ci-operator
+      volumes:
+      - name: ci-pull-credentials
+        secret:
+          secretName: ci-pull-credentials
+      - name: pull-secret
+        secret:
+          secretName: registry-pull-credentials
+      - name: result-aggregator
+        secret:
+          secretName: result-aggregator
+    trigger: (?m)^/test( | .* )mce-publish,?($|\s.*)
+  - agent: kubernetes
     always_run: false
     branches:
     - ^release-ocm-2\.8$
