[DNM] Test ovn gcp rt job with conntrack dump
Signed-off-by: Jaime Caamaño Ruiz <jcaamano@redhat.com>

--- a/ci-operator/step-registry/openshift/upgrade/gcp/ovn-rt/openshift-upgrade-gcp-ovn-rt-workflow.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/gcp/ovn-rt/openshift-upgrade-gcp-ovn-rt-workflow.yaml
@@ -6,6 +6,7 @@ workflow:
     - chain: ipi-conf-gcp
     - ref: ovn-conf
     - ref: ipi-conf-debug-kdump-configure-logs
+    - ref: conntrackdump-service
     - chain: ipi-install-stableinitial
     - ref: optional-operators-configure-realtime-tuned-profile
     test:
