--- a/ci-operator/config/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-0.11.yaml
+++ b/ci-operator/config/opendatahub-io/modelmesh-runtime-adapter/opendatahub-io-modelmesh-runtime-adapter-release-0.11.yaml
@@ -24,7 +24,7 @@ images:
   to: modelmesh-runtime-adapter
 promotion:
   namespace: opendatahub-io
-  tag: stable
+  tag: v0.11.0
 releases:
   latest:
     release:
@@ -93,6 +93,6 @@ tests:
       IMAGE_TAG: v0.11.0
     workflow: opendatahub-io-ci-image-mirror
 zz_generated_metadata:
-  branch: release-v0.11.0
+  branch: release-0.11
   org: opendatahub-io
   repo: modelmesh-runtime-adapter
