--- a/ci-operator/config/opendatahub-io/odh-model-controller/opendatahub-io-odh-model-controller-release-0.11.yaml
+++ b/ci-operator/config/opendatahub-io/odh-model-controller/opendatahub-io-odh-model-controller-release-0.11.yaml
@@ -19,7 +19,7 @@ images:
   to: odh-model-controller
 promotion:
   namespace: opendatahub-io
-  tag: stable
+  tag: v0.11.0
 releases:
   latest:
     release:
@@ -88,6 +88,6 @@ tests:
       IMAGE_TAG: v0.11.0
     workflow: opendatahub-io-ci-image-mirror
 zz_generated_metadata:
-  branch: release-v0.11.0
+  branch: release-0.11
   org: opendatahub-io
   repo: odh-model-controller
