Rename loaded upgrade job metadata and filenames to match with rest for consistency.

--- a/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-periodics.yaml
+++ b/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-periodics.yaml
@@ -3373,10 +3373,10 @@ periodics:
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws-perfscale-qe
-    ci-operator.openshift.io/variant: rosa-candidate-4.12-latest-loaded-upgrade-from-4.12
+    ci-operator.openshift.io/variant: rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-candidate-4.12-latest-loaded-upgrade-from-4.12-perfscale-rosa-multiaz-6nodes-stage-loaded-upgrade412
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-latest-candidate-4.12-loaded-upgrade-from-4.12-perfscale-rosa-multiaz-6nodes-stage-loaded-upgrade412
   spec:
     containers:
     - args:
@@ -3387,7 +3387,7 @@ periodics:
       - --secret-dir=/secrets/ci-pull-credentials
       - --secret-dir=/usr/local/perfscale-rosa-multiaz-6nodes-stage-loaded-upgrade412-cluster-profile
       - --target=perfscale-rosa-multiaz-6nodes-stage-loaded-upgrade412
-      - --variant=rosa-candidate-4.12-latest-loaded-upgrade-from-4.12
+      - --variant=rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
       command:
       - ci-operator
       image: ci-operator:latest
@@ -3448,10 +3448,10 @@ periodics:
   labels:
     ci-operator.openshift.io/cloud: aws
     ci-operator.openshift.io/cloud-cluster-profile: aws-perfscale-qe
-    ci-operator.openshift.io/variant: rosa-candidate-4.13-loaded-upgrade-from-4.12
+    ci-operator.openshift.io/variant: rosa-latest-candidate-4.13-loaded-upgrade-from-4.12
     ci.openshift.io/generator: prowgen
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-candidate-4.13-loaded-upgrade-from-4.12-perfscale-rosa-multiaz-24nodes-stage-loaded-upgrade413
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-latest-candidate-4.13-loaded-upgrade-from-4.12-perfscale-rosa-multiaz-24nodes-stage-loaded-upgrade413
   spec:
     containers:
     - args:
@@ -3462,7 +3462,7 @@ periodics:
       - --secret-dir=/secrets/ci-pull-credentials
       - --secret-dir=/usr/local/perfscale-rosa-multiaz-24nodes-stage-loaded-upgrade413-cluster-profile
       - --target=perfscale-rosa-multiaz-24nodes-stage-loaded-upgrade413
-      - --variant=rosa-candidate-4.13-loaded-upgrade-from-4.12
+      - --variant=rosa-latest-candidate-4.13-loaded-upgrade-from-4.12
       command:
       - ci-operator
       image: ci-operator:latest
