--- a/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-postsubmits.yaml
+++ b/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-postsubmits.yaml
@@ -863,10 +863,10 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/is-promotion: "true"
-      ci-operator.openshift.io/variant: rosa-candidate-4.12-latest-loaded-upgrade-from-4.12
+      ci-operator.openshift.io/variant: rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-candidate-4.12-latest-loaded-upgrade-from-4.12-images
+    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-latest-candidate-4.12-loaded-upgrade-from-4.12-images
     spec:
       containers:
       - args:
@@ -876,7 +876,7 @@ postsubmits:
         - --promote
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=rosa-candidate-4.12-latest-loaded-upgrade-from-4.12
+        - --variant=rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
         command:
         - ci-operator
         image: ci-operator:latest
@@ -919,10 +919,10 @@ postsubmits:
       skip_cloning: true
     labels:
       ci-operator.openshift.io/is-promotion: "true"
-      ci-operator.openshift.io/variant: rosa-candidate-4.13-loaded-upgrade-from-4.12
+      ci-operator.openshift.io/variant: rosa-latest-candidate-4.13-loaded-upgrade-from-4.12
       ci.openshift.io/generator: prowgen
     max_concurrency: 1
-    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-candidate-4.13-loaded-upgrade-from-4.12-images
+    name: branch-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-latest-candidate-4.13-loaded-upgrade-from-4.12-images
     spec:
       containers:
       - args:
@@ -932,7 +932,7 @@ postsubmits:
         - --promote
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=rosa-candidate-4.13-loaded-upgrade-from-4.12
+        - --variant=rosa-latest-candidate-4.13-loaded-upgrade-from-4.12
         command:
         - ci-operator
         image: ci-operator:latest
