--- a/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-presubmits.yaml
+++ b/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-presubmits.yaml
@@ -1399,17 +1399,17 @@ presubmits:
     branches:
     - ^main$
     - ^main-
-    cluster: build04
-    context: ci/prow/rosa-candidate-4.12-latest-loaded-upgrade-from-4.12-images
+    cluster: build01
+    context: ci/prow/rosa-latest-candidate-4.12-loaded-upgrade-from-4.12-images
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
-      ci-operator.openshift.io/variant: rosa-candidate-4.12-latest-loaded-upgrade-from-4.12
+      ci-operator.openshift.io/variant: rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-candidate-4.12-latest-loaded-upgrade-from-4.12-images
-    rerun_command: /test rosa-candidate-4.12-latest-loaded-upgrade-from-4.12-images
+    name: pull-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-latest-candidate-4.12-loaded-upgrade-from-4.12-images
+    rerun_command: /test rosa-latest-candidate-4.12-loaded-upgrade-from-4.12-images
     spec:
       containers:
       - args:
@@ -1417,7 +1417,7 @@ presubmits:
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=rosa-candidate-4.12-latest-loaded-upgrade-from-4.12
+        - --variant=rosa-latest-candidate-4.12-loaded-upgrade-from-4.12
         command:
         - ci-operator
         image: ci-operator:latest
@@ -1444,23 +1444,23 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )rosa-candidate-4.12-latest-loaded-upgrade-from-4.12-images,?($|\s.*)
+    trigger: (?m)^/test( | .* )rosa-latest-candidate-4.12-loaded-upgrade-from-4.12-images,?($|\s.*)
   - agent: kubernetes
     always_run: true
     branches:
     - ^main$
     - ^main-
-    cluster: build04
-    context: ci/prow/rosa-candidate-4.13-loaded-upgrade-from-4.12-images
+    cluster: build01
+    context: ci/prow/rosa-latest-candidate-4.13-loaded-upgrade-from-4.12-images
     decorate: true
     decoration_config:
       skip_cloning: true
     labels:
-      ci-operator.openshift.io/variant: rosa-candidate-4.13-loaded-upgrade-from-4.12
+      ci-operator.openshift.io/variant: rosa-latest-candidate-4.13-loaded-upgrade-from-4.12
       ci.openshift.io/generator: prowgen
       pj-rehearse.openshift.io/can-be-rehearsed: "true"
-    name: pull-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-candidate-4.13-loaded-upgrade-from-4.12-images
-    rerun_command: /test rosa-candidate-4.13-loaded-upgrade-from-4.12-images
+    name: pull-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-latest-candidate-4.13-loaded-upgrade-from-4.12-images
+    rerun_command: /test rosa-latest-candidate-4.13-loaded-upgrade-from-4.12-images
     spec:
       containers:
       - args:
@@ -1468,7 +1468,7 @@ presubmits:
         - --image-import-pull-secret=/etc/pull-secret/.dockerconfigjson
         - --report-credentials-file=/etc/report/credentials
         - --target=[images]
-        - --variant=rosa-candidate-4.13-loaded-upgrade-from-4.12
+        - --variant=rosa-latest-candidate-4.13-loaded-upgrade-from-4.12
         command:
         - ci-operator
         image: ci-operator:latest
@@ -1495,4 +1495,4 @@ presubmits:
       - name: result-aggregator
         secret:
           secretName: result-aggregator
-    trigger: (?m)^/test( | .* )rosa-candidate-4.13-loaded-upgrade-from-4.12-images,?($|\s.*)
+    trigger: (?m)^/test( | .* )rosa-latest-candidate-4.13-loaded-upgrade-from-4.12-images,?($|\s.*)
