Rename some jobs for rosa 4.14 for easy read/usability. And add slack notifications for all 4.14 ec and nightly tests.

--- a/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-periodics.yaml
+++ b/ci-operator/jobs/openshift-qe/ocp-qe-perfscale-ci/openshift-qe-ocp-qe-perfscale-ci-main-periodics.yaml
@@ -3073,7 +3073,18 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-ec-perfscale-rosa-multiaz-ec-cp-2nodes-periodic
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-ec-perfscale-rosa-multiaz-ec-control-plane-2nodes-periodic
+  reporter_config:
+    slack:
+      channel: '#ocp-qe-scale-ci-results'
+      job_states_to_report:
+      - success
+      - failure
+      - error
+      report_template: '{{if eq .Status.State "success"}} :white_check_mark: Job *{{.Spec.Job}}*
+        ended with *{{.Status.State}}*. <{{.Status.URL}}|View logs> :white_check_mark:
+        {{else}} :warning:  Job *{{.Spec.Job}}* ended with *{{.Status.State}}*. <{{.Status.URL}}|View
+        logs> :warning: {{end}}'
   spec:
     containers:
     - args:
@@ -3082,8 +3093,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/perfscale-rosa-multiaz-ec-cp-2nodes-periodic-cluster-profile
-      - --target=perfscale-rosa-multiaz-ec-cp-2nodes-periodic
+      - --secret-dir=/usr/local/perfscale-rosa-multiaz-ec-control-plane-2nodes-periodic-cluster-profile
+      - --target=perfscale-rosa-multiaz-ec-control-plane-2nodes-periodic
       - --variant=rosa-4.14-ec
       command:
       - ci-operator
@@ -3100,7 +3111,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/perfscale-rosa-multiaz-ec-cp-2nodes-periodic-cluster-profile
+      - mountPath: /usr/local/perfscale-rosa-multiaz-ec-control-plane-2nodes-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -3149,7 +3160,18 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-ec-perfscale-rosa-multiaz-ec-data-path-defaultnodes-periodic
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-ec-perfscale-rosa-multiaz-ec-data-path-3nodes-periodic
+  reporter_config:
+    slack:
+      channel: '#ocp-qe-scale-ci-results'
+      job_states_to_report:
+      - success
+      - failure
+      - error
+      report_template: '{{if eq .Status.State "success"}} :white_check_mark: Job *{{.Spec.Job}}*
+        ended with *{{.Status.State}}*. <{{.Status.URL}}|View logs> :white_check_mark:
+        {{else}} :warning:  Job *{{.Spec.Job}}* ended with *{{.Status.State}}*. <{{.Status.URL}}|View
+        logs> :warning: {{end}}'
   spec:
     containers:
     - args:
@@ -3158,8 +3180,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/perfscale-rosa-multiaz-ec-data-path-defaultnodes-periodic-cluster-profile
-      - --target=perfscale-rosa-multiaz-ec-data-path-defaultnodes-periodic
+      - --secret-dir=/usr/local/perfscale-rosa-multiaz-ec-data-path-3nodes-periodic-cluster-profile
+      - --target=perfscale-rosa-multiaz-ec-data-path-3nodes-periodic
       - --variant=rosa-4.14-ec
       command:
       - ci-operator
@@ -3176,7 +3198,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/perfscale-rosa-multiaz-ec-data-path-defaultnodes-periodic-cluster-profile
+      - mountPath: /usr/local/perfscale-rosa-multiaz-ec-data-path-3nodes-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -3225,7 +3247,18 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-ec-perfscale-rosa-singleaz-ec-data-path-perf-2nodes-periodic
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-ec-perfscale-rosa-singleaz-ec-data-path-2nodes-periodic
+  reporter_config:
+    slack:
+      channel: '#ocp-qe-scale-ci-results'
+      job_states_to_report:
+      - success
+      - failure
+      - error
+      report_template: '{{if eq .Status.State "success"}} :white_check_mark: Job *{{.Spec.Job}}*
+        ended with *{{.Status.State}}*. <{{.Status.URL}}|View logs> :white_check_mark:
+        {{else}} :warning:  Job *{{.Spec.Job}}* ended with *{{.Status.State}}*. <{{.Status.URL}}|View
+        logs> :warning: {{end}}'
   spec:
     containers:
     - args:
@@ -3234,8 +3267,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/perfscale-rosa-singleaz-ec-data-path-perf-2nodes-periodic-cluster-profile
-      - --target=perfscale-rosa-singleaz-ec-data-path-perf-2nodes-periodic
+      - --secret-dir=/usr/local/perfscale-rosa-singleaz-ec-data-path-2nodes-periodic-cluster-profile
+      - --target=perfscale-rosa-singleaz-ec-data-path-2nodes-periodic
       - --variant=rosa-4.14-ec
       command:
       - ci-operator
@@ -3252,7 +3285,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/perfscale-rosa-singleaz-ec-data-path-perf-2nodes-periodic-cluster-profile
+      - mountPath: /usr/local/perfscale-rosa-singleaz-ec-data-path-2nodes-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
@@ -3301,7 +3334,18 @@ periodics:
     ci.openshift.io/generator: prowgen
     job-release: "4.14"
     pj-rehearse.openshift.io/can-be-rehearsed: "true"
-  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-nightly-perfscale-rosa-multiaz-cp-120nodes-periodic
+  name: periodic-ci-openshift-qe-ocp-qe-perfscale-ci-main-rosa-4.14-nightly-perfscale-rosa-multiaz-control-plane-120nodes-periodic
+  reporter_config:
+    slack:
+      channel: '#ocp-qe-scale-ci-results'
+      job_states_to_report:
+      - success
+      - failure
+      - error
+      report_template: '{{if eq .Status.State "success"}} :white_check_mark: Job *{{.Spec.Job}}*
+        ended with *{{.Status.State}}*. <{{.Status.URL}}|View logs> :white_check_mark:
+        {{else}} :warning:  Job *{{.Spec.Job}}* ended with *{{.Status.State}}*. <{{.Status.URL}}|View
+        logs> :warning: {{end}}'
   spec:
     containers:
     - args:
@@ -3310,8 +3354,8 @@ periodics:
       - --lease-server-credentials-file=/etc/boskos/credentials
       - --report-credentials-file=/etc/report/credentials
       - --secret-dir=/secrets/ci-pull-credentials
-      - --secret-dir=/usr/local/perfscale-rosa-multiaz-cp-120nodes-periodic-cluster-profile
-      - --target=perfscale-rosa-multiaz-cp-120nodes-periodic
+      - --secret-dir=/usr/local/perfscale-rosa-multiaz-control-plane-120nodes-periodic-cluster-profile
+      - --target=perfscale-rosa-multiaz-control-plane-120nodes-periodic
       - --variant=rosa-4.14-nightly
       command:
       - ci-operator
@@ -3328,7 +3372,7 @@ periodics:
       - mountPath: /secrets/ci-pull-credentials
         name: ci-pull-credentials
         readOnly: true
-      - mountPath: /usr/local/perfscale-rosa-multiaz-cp-120nodes-periodic-cluster-profile
+      - mountPath: /usr/local/perfscale-rosa-multiaz-control-plane-120nodes-periodic-cluster-profile
         name: cluster-profile
       - mountPath: /secrets/gcs
         name: gcs-credentials
