--- a/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
+++ b/ci-operator/config/openshift/hypershift/openshift-hypershift-release-4.14__periodics.yaml
@@ -179,6 +179,7 @@ tests:
       RHCOS_VERSION: 413.92.202305041429-0
       ROOT_FS_URL: https://mirror.openshift.com/pub/openshift-v4/ppc64le/dependencies/rhcos/4.13/4.13.0/rhcos-4.13.0-ppc64le-live-rootfs.ppc64le.img
     workflow: hypershift-mce-power-conformance
+  timeout: 8h0m0s
 zz_generated_metadata:
   branch: release-4.14
   org: openshift
