--- a/ci-operator/step-registry/hypershift/mce/power/test/hypershift-mce-power-test-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/power/test/hypershift-mce-power-test-chain.yaml
@@ -14,10 +14,11 @@ chain:
           oc get clusterversion 2>/dev/null || true
           sleep 1s
         done
+        sleep 28800
       from: tests
       grace_period: 15m0s
       resources:
         requests:
           cpu: 100m
           memory: 100Mi
-      timeout: 30m0s
+      timeout: 8h0m0s
