mirror images via oc-mirror and Upgrade catalog qe-app-registry after ocp upgrade

--- a/ci-operator/step-registry/cucushift/upgrade/cucushift-upgrade-chain.yaml
+++ b/ci-operator/step-registry/cucushift/upgrade/cucushift-upgrade-chain.yaml
@@ -6,6 +6,7 @@ chain:
   - ref: cucushift-upgrade-prepare
   - ref: cucushift-upgrade-healthcheck
   - ref: cucushift-upgrade-toimage
+  - ref: enable-qe-catalogsource-update
   - ref: cucushift-upgrade-check
   - ref: cucushift-upgrade-report
   documentation: |-
