--- a/ci-operator/step-registry/openshift/upgrade/qe/test/paused-to-latest/openshift-upgrade-qe-test-paused-to-latest-chain.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/qe/test/paused-to-latest/openshift-upgrade-qe-test-paused-to-latest-chain.yaml
@@ -13,6 +13,7 @@ chain:
   - ref: cucushift-upgrade-paused-latest-sanity
   - ref: cucushift-upgrade-paused-unpause-to-latest
   - ref: cucushift-upgrade-healthcheck
+  - ref: enable-qe-catalogsource-update
   - ref: openshift-extended-upgrade-post
   - ref: cucushift-upgrade-check
   - ref: cucushift-upgrade-report
