--- a/ci-operator/step-registry/cucushift/upgrade/disconnected/cucushift-upgrade-disconnected-chain.yaml
+++ b/ci-operator/step-registry/cucushift/upgrade/disconnected/cucushift-upgrade-disconnected-chain.yaml
@@ -7,6 +7,7 @@ chain:
   - ref: cucushift-upgrade-mirror-images-by-oc-adm
   - ref: cucushift-upgrade-healthcheck
   - ref: cucushift-upgrade-toimage
+  - ref: enable-qe-catalogsource-disconnected-update
   - ref: cucushift-upgrade-check
   - ref: cucushift-upgrade-report
   documentation: |-
