--- a/ci-operator/step-registry/openshift/upgrade/qe/test/disconnected/openshift-upgrade-qe-test-disconnected-chain.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/qe/test/disconnected/openshift-upgrade-qe-test-disconnected-chain.yaml
@@ -9,6 +9,7 @@ chain:
   - ref: cucushift-upgrade-mirror-images-by-oc-adm
   - ref: cucushift-upgrade-healthcheck
   - ref: cucushift-upgrade-toimage
+  - ref: enable-qe-catalogsource-disconnected-update
   - ref: openshift-extended-upgrade-post
   - ref: cucushift-upgrade-check
   - ref: cucushift-upgrade-report
