--- a/ci-operator/step-registry/openshift/upgrade/qe/test/openshift-upgrade-qe-test-chain.yaml
+++ b/ci-operator/step-registry/openshift/upgrade/qe/test/openshift-upgrade-qe-test-chain.yaml
@@ -8,6 +8,7 @@ chain:
   - ref: cucushift-upgrade-prepare
   - ref: cucushift-upgrade-healthcheck
   - ref: cucushift-upgrade-toimage
+  - ref: enable-qe-catalogsource-update
   - ref: openshift-extended-upgrade-post
   - ref: cucushift-upgrade-check
   - ref: cucushift-upgrade-report
