Adding HYPERSHIFT_CLI_NAME variable in destroy chain as well

--- a/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/test/hypershift-mce-ibmz-test-chain.yaml
@@ -6,7 +6,7 @@ chain:
       commands: |-
         set -x
         hc_name="agent-ibmz"
-        echo "Checkinf for the cluster-operators status to be ready"
+        echo "Checking for the cluster-operators status to be ready"
         export KUBECONFIG=${SHARED_DIR}/${hc_name}_kubeconfig
         while true; do
             count=$(oc get co --no-headers| awk '$3 != "True" {print $1}' | wc -l)
