--- a/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/destroy/hypershift-mce-ibmz-destroy-chain.yaml
@@ -30,8 +30,24 @@ chain:
             oc delete agent ${agents_list[i]} -n ${hcp_ns}
         done
 
+        # Installing hypershift cli
+        MCE_VERSION=$(oc get "$(oc get multiclusterengines -oname)" -ojsonpath="{.status.currentVersion}" | cut -c 1-3)
+        HYPERSHIFT_CLI_NAME=hcp
+        if (( $(echo "$MCE_VERSION < 2.4" | bc -l) )); then
+        echo "MCE version is less than 2.4, use the hypershift cli name in the command"
+        HYPERSHIFT_CLI_NAME=hypershift
+        fi
+
+        echo "$(date) Installing hypershift cli"
+        mkdir /tmp/${HYPERSHIFT_CLI_NAME}_cli
+        downloadURL=$(oc get ConsoleCLIDownload ${HYPERSHIFT_CLI_NAME}-cli-download -o json | jq -r '.spec.links[] | select(.text | test("Linux for x86_64")).href')
+        curl -k --output /tmp/${HYPERSHIFT_CLI_NAME}.tar.gz ${downloadURL}
+        tar -xvf /tmp/${HYPERSHIFT_CLI_NAME}.tar.gz -C /tmp/${HYPERSHIFT_CLI_NAME}_cli
+        chmod +x /tmp/${HYPERSHIFT_CLI_NAME}_cli/${HYPERSHIFT_CLI_NAME}
+        export PATH=$PATH:/tmp/${HYPERSHIFT_CLI_NAME}_cli
+        
         echo "Triggering the hosted cluster ${hc_name} deletion"
-        hypershift destroy cluster agent --name ${hc_name} --namespace ${hc_ns}
+        ${HYPERSHIFT_CLI_NAME} destroy cluster agent --name ${hc_name} --namespace ${hc_ns}
       from: dev-scripts
       grace_period: 15m0s
       resources:
