chore: Eclipse Che server config update. Allow to configure SSH key pairs with PAT
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
+++ b/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
@@ -163,9 +163,10 @@ tests:
     test:
     - as: che-server-test
       cli: latest
-      commands: |
-        export GITHUB_PAT=$(cat /usr/local/ci-secrets/github/gh-pat)
-        /bin/bash .ci/openshift-ci/test-github-with-pat-setup-flow.sh
+      commands: "export GITHUB_PAT=$(cat /usr/local/ci-secrets/github/gh-pat)\nexport
+        GITHUB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/github/github-private-key)\nexport
+        GITHUB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/github/github-public-key)        \n/bin/bash
+        .ci/openshift-ci/test-github-with-pat-setup-flow.sh\n"
       credentials:
       - mount_path: /usr/local/ci-secrets/github
         name: github
@@ -182,9 +183,10 @@ tests:
     test:
     - as: che-server-test
       cli: latest
-      commands: |
-        export GITLAB_PAT=$(cat /usr/local/ci-secrets/gitlab/gl-pat)
-        /bin/bash .ci/openshift-ci/test-gitlab-with-pat-setup-flow.sh
+      commands: "export GITLAB_PAT=$(cat /usr/local/ci-secrets/gitlab/gl-pat)\nexport
+        GITLAB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/gitlab/gitlab-private-key)\nexport
+        GITLAB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/gitlab/gitlab-public-key)        \n/bin/bash
+        .ci/openshift-ci/test-gitlab-with-pat-setup-flow.sh\n"
       credentials:
       - mount_path: /usr/local/ci-secrets/gitlab
         name: gitlab
@@ -203,6 +205,8 @@ tests:
       cli: latest
       commands: |
         export AZURE_PAT=$(cat /usr/local/ci-secrets/azure/azure-pat)
+        export AZURE_PRIVATE_KEY=$(cat /usr/local/ci-secrets/azure/azure-private-key)
+        export AZURE_PUBLIC_KEY=$(cat /usr/local/ci-secrets/azure/azure-public-key)
         /bin/bash .ci/openshift-ci/test-azure-with-pat-setup-flow.sh
       credentials:
       - mount_path: /usr/local/ci-secrets/azure
