--- a/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
+++ b/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
@@ -163,10 +163,11 @@ tests:
     test:
     - as: che-server-test
       cli: latest
-      commands: "export GITHUB_PAT=$(cat /usr/local/ci-secrets/github/gh-pat)\nexport
-        GITHUB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/github/github-private-key)\nexport
-        GITHUB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/github/github-public-key)        \n/bin/bash
-        .ci/openshift-ci/test-github-with-pat-setup-flow.sh\n"
+      commands: |
+        export GITHUB_PAT=$(cat /usr/local/ci-secrets/github/gh-pat)
+        export GITHUB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/github/github-private-key)
+        export GITHUB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/github/github-public-key)
+        /bin/bash .ci/openshift-ci/test-github-with-pat-setup-flow.sh\n"
       credentials:
       - mount_path: /usr/local/ci-secrets/github
         name: github
@@ -183,10 +184,11 @@ tests:
     test:
     - as: che-server-test
       cli: latest
-      commands: "export GITLAB_PAT=$(cat /usr/local/ci-secrets/gitlab/gl-pat)\nexport
-        GITLAB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/gitlab/gitlab-private-key)\nexport
-        GITLAB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/gitlab/gitlab-public-key)        \n/bin/bash
-        .ci/openshift-ci/test-gitlab-with-pat-setup-flow.sh\n"
+      commands: |
+        export GITLAB_PAT=$(cat /usr/local/ci-secrets/gitlab/gl-pat)
+        export GITLAB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/gitlab/gitlab-private-key)
+        export GITLAB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/gitlab/gitlab-public-key)
+        /bin/bash .ci/openshift-ci/test-gitlab-with-pat-setup-flow.sh
       credentials:
       - mount_path: /usr/local/ci-secrets/gitlab
         name: gitlab
