--- a/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
+++ b/ci-operator/config/eclipse-che/che-server/eclipse-che-che-server-main__v12.yaml
@@ -167,7 +167,7 @@ tests:
         export GITHUB_PAT=$(cat /usr/local/ci-secrets/github/gh-pat)
         export GITHUB_PRIVATE_KEY=$(cat /usr/local/ci-secrets/github/github-private-key)
         export GITHUB_PUBLIC_KEY=$(cat /usr/local/ci-secrets/github/github-public-key)
-        /bin/bash .ci/openshift-ci/test-github-with-pat-setup-flow.sh\n"
+        /bin/bash .ci/openshift-ci/test-github-with-pat-setup-flow.sh
       credentials:
       - mount_path: /usr/local/ci-secrets/github
         name: github
