Renaming the parameter for OCP_RELEASE_VERSION

--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/hcp/hypershift-mce-ibmz-create-hcp-ref.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/hcp/hypershift-mce-ibmz-create-hcp-ref.yaml
@@ -4,8 +4,8 @@ ref:
   env:
     - name: OCP_VERSION
       documentation: "Openshift Version to use in OSImage config in AgentServiceConfig"
-    - name: OCP_RELEASE_FILE_URL
-      documentation: "URL for release.txt file of specific OCP version"
+    - name: OCP_RELEASE_VERSION
+      documentation: "Version of OCP RHCOS RELEASE build"
     - name: ISO_URL
       documentation: "ISO URL to use in OSImage config in AgentServiceConfig"
     - name: ROOT_FS_URL
