--- a/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-chain.yaml
+++ b/ci-operator/step-registry/hypershift/mce/ibmz/create/hypershift-mce-ibmz-create-chain.yaml
@@ -3,8 +3,8 @@ chain:
   env:
     - name: OCP_VERSION
       documentation: "Openshift Version to use in OSImage config in AgentServiceConfig"
-    - name: OCP_RELEASE_FILE_URL
-      documentation: "URL for release.txt file of specific OCP version"
+    - name: OCP_RELEASE_VERSION
+      documentation: "Version for OCP RHCOS RELEASE build"
     - name: ISO_URL
       documentation: "ISO URL to use in OSImage config in AgentServiceConfig"
     - name: ROOT_FS_URL
