--- a/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-nightly.yaml
+++ b/ci-operator/config/openshift/openshift-tests-private/openshift-openshift-tests-private-release-4.14__arm64-nightly.yaml
@@ -1723,7 +1723,7 @@ tests:
       RESERVE_BOOTSTRAP: "false"
       architecture: arm64
       ipv4_enabled: "true"
-      ipv6_enabled: "false"
+      ipv6_enabled: "true"
       masters: "3"
       workers: "0"
     workflow: baremetal-lab-agent-install-network-static
