Changing config, to see tests in sippy dashboard

--- a/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
+++ b/ci-operator/config/redhat-chaos/krkn-hub/redhat-chaos-krkn-hub-main.yaml
@@ -11,11 +11,11 @@ images:
   to: krkn-hub
 releases:
   initial:
-    integration:
+    candidate:
       name: "4.13"
       namespace: ocp
   latest:
-    integration:
+    candidate:
       include_built_images: true
       name: "4.13"
       namespace: ocp
